early-stage animations complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
+<app-loading-screen *ngIf="isLoading" (loadingComplete)="onLoadingComplete()"></app-loading-screen>
 <div class="app">
   <app-triangle-grid style="z-index: -1"></app-triangle-grid>
-  <app-navbar style="position: absolute"></app-navbar>
+  <app-navbar style="position: absolute; margin-top: 20px;"></app-navbar>
 </div>
 <div class="home">
-  <app-home>Words</app-home>
+  <app-home></app-home>
 </div>
 <router-outlet />
