--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,83 @@
+
+
 .home {
-  width: 30vw;
+  --home-width: 40vw;
+  width: var(--home-width);
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  font-size: 3rem;
+  font-family: "Courier New", Courier, monospace;
+  justify-content: center;
+}
+
+.name-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 40%;
+}
+
+.skill-outer-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 10%;
+}
+
+.skill-container {
+  position: relative;
+  width: 100%;
+  height: 1.2em; 
+  overflow: hidden;
+}
+
+.skill-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 4rem;
-  font-family: "Courier New", Courier, monospace;
+}
+
+.skill-wrapper b {
+  white-space: nowrap;
+}
+
+.social-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  height: 50%;
+}
+
+.social-icon {
+  width: 5rem;
+  height: auto; 
+  margin: 0;
+}
+
+.home-container {
+  display: flex;
+  height: 100vh;
+}
+
+.self-portrait {
+  width: 30vw;
+  height: 100vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.circle {
+  background-image: url('/assets/IMG_1899.jpg');
+  background-size: cover;
+  border-radius: 25%;
+  width: 20rem;
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
