--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-loading-screen *ngIf="isLoading" (loadingComplete)="onLoadingComplete()"></app-loading-screen>
 <div class="app">
   <app-triangle-grid style="z-index: -1"></app-triangle-grid>
-  <app-navbar style="position: absolute; margin-top: 20px;"></app-navbar>
+  <app-navbar style="position: absolute"></app-navbar>
 </div>
 <div class="home">
   <app-home></app-home>
