--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
       <a href="https://github.com/vasilisgadala" target="_blank">
         <img src="/assets/pngegg.png" alt="GitHub" class="social-icon">
       </a>
-      <a href="https://www.linkedin.com/in/vasilis-gadala-900000200/" target="_blank">
+      <a href="https://www.linkedin.com/in/vasilis-gadala" target="_blank">
         <img src="/assets/icons8-linkedin-100.png" alt="LinkedIn" class="social-icon">
       </a>
     </div>
