--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -14,6 +14,13 @@
 
 .navbar-text {
   color: #D2B48C;
-  font-size: 22px;
-  padding: 20px;
+  font-size: 1.375rem; /* 22px / 16 = 1.375rem */
+  padding: 1.25rem; /* 20px / 16 = 1.25rem */
+}
+
+@media (max-width: 932px) {
+  .navbar {
+    --navbar_width: 100vw;
+    --navbar_height: max(8vh, 70px);
+  }
 }
