--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-html {
+body, html {
   font-size: 16px;
+  width: 100%;
+  /* overflow-x: hidden; */
 }
 
 *, *:before, *:after {
@@ -10,7 +12,7 @@ html {
 }
 
 .main {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: rgb(0, 0, 0);
 }
