about and skills section complete

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,8 @@
-<div class="about-container"></div>
+<div class="about-container">
+    <div class="about-content">
+        <h2>About</h2>
+        <p>I'm a 3rd year undergraduate pursuing a bachelor's degree in Computer Science at Northeastern University, specializing in AI with a minor in Robotics. After graduation, I plan to pursue a one-year Master's in Computer Science.</p>
+        <p>I'm passionate about tackling challenging problems and open to exploring diverse fields, including full-stack development, cybersecurity, robotics, AI, machine learning, and data science.</p>
+        <h2 style="padding-top: 100px;">Skills</h2>
+    </div>
+</div>
