--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,10 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 125vh;
+  height: auto;
   width: 100%;
- /* background-color: black; */
   background: linear-gradient(to bottom, 
   rgba(0,0,0,0) 0%,
   rgba(0,0,0,0.25) 5%,
@@ -14,3 +12,33 @@
   rgba(0,0,0,1) 20%);
   position: relative;
 }
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  margin-top: 15%;
+  height: 85%;
+  width: 50%;
+}
+
+h2 {
+  font-size: 3rem;
+  color: #ffffff; /* D2B48C */
+  padding: 10px;
+}
+
+p {
+  font-size: 1.5rem;
+  color: #999999;
+  text-align: center;
+  padding: 10px;
+}
+
+@media (max-width: 932px) {
+  .about-content {
+    width: 80%;
+  }
+}
+
