--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <app-loading-screen *ngIf="isLoading" (loadingComplete)="onLoadingComplete()"></app-loading-screen>
-<div class="app" style="z-index: 1; display: flex; width: 100%; height: 100%; justify-content: flex-start; align-content: center;">
-  <app-navbar style="position: fixed; z-index: 2"></app-navbar>
+<div class="app" style="z-index: 1; display: flex; width: 100%; justify-content: flex-start; align-content: center;">
+  <app-navbar style="position: fixed; z-index: 1"></app-navbar>
 </div>
-<div class="app">
+<div class="app" style="z-index: -1">
     <app-triangle-grid style="z-index: -1"></app-triangle-grid>
-  </div>
-  <div class="home">
-    <app-home style="display: flex "></app-home>
-  </div>
+</div>
+<div class="home">
+  <app-home style="display: flex "></app-home>
+</div>
 <app-about style="display: flex"></app-about>
+<app-skills-page><</app-skills-page>
 <router-outlet />
