--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -13,7 +13,7 @@
 }
 
 .navbar-text {
-  color: #D2B48C;
+  color: #ffffff; /* change color to D2B48C for whichever panel I am on */
   font-size: 1.375rem; /* 22px / 16 = 1.375rem */
   padding: 1.25rem; /* 20px / 16 = 1.25rem */
 }
