working resume page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,5 @@
 </div>
 <app-about style="display: flex"></app-about>
 <app-skills-page><</app-skills-page>
+<app-resume></app-resume>
 <router-outlet />
