--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,14 +1,17 @@
 <div class="resume-container">
     <h2>Resume</h2>
-    <a href="https://github.com/vasilisgadala" target="_blank">
-        <img src="/assets/download-regular-240.png" alt="GitHub" class="resume-icon">
+    <a href="/assets/VasilisGadalaResume_08-08-2024.pdf" download="VasilisGadalaResume_08-08-2024.pdf">
+        <img src="/assets/download-regular-240.png" alt="Resume" class="resume-icon">
     </a>
     <div class="resume-item-container" style="padding-top: 50px;">
-        <div class="item-left" style="padding-top: 50px;">
+        <div class="resume-item-logo-container" style="padding-top: 75px">
+            <img src="/assets/google-color-svgrepo-com.svg" alt="Google" class="resume-item-logo">
+        </div>
+        <div class="item-left desktop-padding">
             <h3>Google Software Engineering Intern</h3>
             <p>May 2024 - August 2024</p>
         </div>
-        <div class="item-right" style="padding-top: 40px;">
+        <div class="item-right desktop-padding">
             <h4>Augmented backend financial frameworks responsible for RPC to SQL translation.
             Developed 3 features that have been onboarded to enable refined data access.
             Created generic design utilizing the Command and Builder Design patterns, reducing
@@ -18,6 +21,9 @@
         </div>
     </div> 
     <div class="resume-item-container">
+        <div class="resume-item-logo-container" style="padding-top: 25px">
+            <img src="/assets/26794_logo_wayfair.png" alt="Wayfair" class="resume-item-logo">
+        </div>
         <div class="item-left">
             <h3>Wayfair Software Engineer Co-op</h3>
             <p>January 2023 - June 2023</p>
@@ -31,6 +37,9 @@
         </div>
     </div> 
     <div class="resume-item-container">
+        <div class="resume-item-logo-container" style="padding-top: 25px">
+            <img src="/assets/seal-red.svg" alt="Northeastern" class="resume-item-logo">
+        </div>
         <div class="item-left">
             <h3>Teaching Assistant - Object Oriented Design</h3>
             <p>September 2022 - December 2022</p>
@@ -42,6 +51,9 @@
         </div>
     </div> 
     <div class="resume-item-container">
+        <div class="resume-item-logo-container" style="padding-top: 25px">
+            <img src="/assets/aragon-high-school-san-mateo-ca_0cad896bb0.png" alt="FTC" class="resume-item-logo">
+        </div>
         <div class="item-left">
             <h3>Aragon High School Robotics CAD Engineer</h3>
             <p>September 2017 - June 2021</p>
@@ -51,6 +63,20 @@
                 Team qualified for the FTC World Championship in 2021.
             </h4>
         </div>
-    </div> 
-
+    </div>
+    <h2 style="padding-top: 50px; padding-bottom: 50px;">Education</h2>
+    <div class="resume-item-container">
+        <div class="resume-item-logo-container" style="padding-top: 25px">
+            <img src="/assets/seal-red.svg" alt="Northeastern" class="resume-item-logo">
+        </div>
+        <div class="item-left">
+            <h3>BSCS &#64; Northeastern University</h3>
+            <p>September 2021 - Present</p>
+        </div>
+        <div class="item-right">
+            <h4>Studying BSCS with a concentration in AI and a minor in Robotics. 
+                Planning to pursue Plus One program for MSCS. Consistently part of the Dean's list. 3.885 cumulative GPA
+            </h4>
+        </div>
+    </div>
 </div>
