--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -3,8 +3,8 @@
     <a href="/assets/VasilisGadalaResume_08-08-2024.pdf" download="VasilisGadalaResume_08-08-2024.pdf">
         <img src="/assets/download-regular-240.png" alt="Resume" class="resume-icon">
     </a>
-    <div class="resume-item-container" style="padding-top: 50px;">
-        <div class="resume-item-logo-container" style="padding-top: 75px">
+    <div class="resume-item-container" style="padding-top: 3rem;">
+        <div class="resume-item-logo-container" style="padding-top: 4.5rem">
             <img src="/assets/google-color-svgrepo-com.svg" alt="Google" class="resume-item-logo">
         </div>
         <div class="item-left desktop-padding">
@@ -21,7 +21,7 @@
         </div>
     </div> 
     <div class="resume-item-container">
-        <div class="resume-item-logo-container" style="padding-top: 25px">
+        <div class="resume-item-logo-container" style="padding-top: 1.5rem">
             <img src="/assets/26794_logo_wayfair.png" alt="Wayfair" class="resume-item-logo">
         </div>
         <div class="item-left">
@@ -37,7 +37,7 @@
         </div>
     </div> 
     <div class="resume-item-container">
-        <div class="resume-item-logo-container" style="padding-top: 25px">
+        <div class="resume-item-logo-container" style="padding-top: 1.5rem">
             <img src="/assets/seal-red.svg" alt="Northeastern" class="resume-item-logo">
         </div>
         <div class="item-left">
@@ -51,7 +51,7 @@
         </div>
     </div> 
     <div class="resume-item-container">
-        <div class="resume-item-logo-container" style="padding-top: 25px">
+        <div class="resume-item-logo-container" style="padding-top: 1.5rem">
             <img src="/assets/aragon-high-school-san-mateo-ca_0cad896bb0.png" alt="FTC" class="resume-item-logo">
         </div>
         <div class="item-left">
@@ -64,9 +64,9 @@
             </h4>
         </div>
     </div>
-    <h2 style="padding-top: 50px; padding-bottom: 50px;">Education</h2>
+    <h2 style="padding-top: 3rem; padding-bottom: 3rem;">Education</h2>
     <div class="resume-item-container">
-        <div class="resume-item-logo-container" style="padding-top: 25px">
+        <div class="resume-item-logo-container" style="padding-top: 1.5rem">
             <img src="/assets/seal-red.svg" alt="Northeastern" class="resume-item-logo">
         </div>
         <div class="item-left">
