--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -13,9 +13,16 @@
 }
 
 .navbar-text {
-  color: #ffffff; /* change color to D2B48C for whichever panel I am on */
-  font-size: 1.375rem; /* 22px / 16 = 1.375rem */
-  padding: 1.25rem; /* 20px / 16 = 1.25rem */
+  color: #ffffff;
+  font-size: 1.375rem;
+  padding: 1.25rem;
+  transform-origin: center;
+  transition: transform 0.2s, color 0.3s;
+  cursor: pointer;
+}
+
+.navbar-text.active {
+  color: #D2B48C;
 }
 
 @media (max-width: 932px) {
@@ -24,3 +31,9 @@
     --navbar_height: max(8vh, 70px);
   }
 }
+
+.navbar-text:hover {
+  transform: scale(1.1);
+  cursor: default;
+}
+
