--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,14 @@
 <div class="navbar">
-  <p class="navbar-text">Home</p>
-  <p class="navbar-text">About</p>
-  <p class="navbar-text">Experience</p>
-  <p class="navbar-text">Projects</p>
+  <p class="navbar-text" 
+     [ngClass]="{'active': activeSection === 'home'}" 
+     (click)="scrollTo('home')">Home</p>
+  <p class="navbar-text" 
+     [ngClass]="{'active': activeSection === 'about'}" 
+     (click)="scrollTo('about')">About</p>
+  <p class="navbar-text" 
+     [ngClass]="{'active': activeSection === 'experience'}" 
+     (click)="scrollTo('experience')">Experience</p>
+  <p class="navbar-text" 
+     [ngClass]="{'active': activeSection === 'projects'}" 
+     (click)="scrollTo('projects')">Projects</p>
 </div>
