--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   background-color: #000000;
+  padding-top: 60px;
 }
 
 h2 {
@@ -53,10 +54,10 @@ h3 {
     width: 70%;
     position: relative; /* Add this */
     p {
-        padding-bottom: 50px;
+        padding-bottom: 3rem;
     }
     h4 {
-        padding-bottom: 50px;
+        padding-bottom: 3rem;
     }
 }
 
@@ -65,10 +66,9 @@ h3 {
     content: '';
     position: absolute;
     padding-top: 50px;
-    padding-bottom: 50px;
     left: 45%; /* Adjust this value to match your layout */
     height: 100%;
-    width: 1px;
+    width: 0.06rem;
     background-color: #999999;
 }
 
@@ -79,23 +79,23 @@ h3 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding-right: 40px;
+    padding-right: 2.25rem;
     /* Remove the border-right property from here */
 }
 
 .item-right {
     width: 55%;
     height: 100%;
-    padding-left: 40px;
+    padding-left: 2.25rem;
 }
 
 /* Add this new class */
 .desktop-padding {
-    padding-top: 50px;
+    padding-top: 3rem;
 }
 
 .item-right.desktop-padding {
-    padding-top: 50px;
+    padding-top: 3rem;
 }
 
 @media (max-width: 768px) {
