--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -4,12 +4,12 @@
   align-items: center;
   height: auto;
   width: 100%;
-  background: linear-gradient(to bottom, 
-  rgba(0,0,0,0) 0%,
-  rgba(0,0,0,0.25) 5%,
-  rgba(0,0,0,0.5) 10%,
-  rgba(0,0,0,0.75) 15%,
-  rgba(0,0,0,1) 20%);
+  background: linear-gradient(to bottom,
+  rgba(0,0,0,0) 0vh,
+  rgba(0,0,0,0.25) 5vh,
+  rgba(0,0,0,0.5) 10vh,
+  rgba(0,0,0,0.75) 15vh,
+  rgba(0,0,0,1) 20vh);
   position: relative;
 }
 
@@ -18,8 +18,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  margin-top: 15%;
   width: 50%;
+}
+
+.spacing {
+  display: flex;
+  padding-top: 10vh;
 }
 
 h2 {
