--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -9,7 +9,7 @@
     overflow-x: hidden; /* Prevent horizontal overflow */
     padding-top: 60px;
 }
-  
+
 .projects-content {
     display: flex;
     flex-direction: column;
@@ -26,22 +26,22 @@
     align-items: flex-end;
     color: #999999;
 }
-  
+
 h2 {
-    font-size: 2.5rem; /* Reduced font size for smaller screens */
+    font-size: 3rem;
     color: #ffffff;
     padding: 10px;
     margin-bottom: 2rem;
     text-align: center; /* Center the heading */
 }
-  
+
 .projects-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     width: 100%;
 }
-  
+
 .project-card {
     background-color: #d3d3d3; /* Light gray */
     border-radius: 0.6rem;
@@ -51,25 +51,25 @@ h2 {
     opacity: 0;
     transition: transform 2s ease-out, opacity 2s ease-out; /* Slowed down */
 }
-  
+
 .project-card.from-left {
     transform: translateX(-100%);
 }
-  
+
 .project-card.from-right {
     transform: translateX(100%);
 }
-  
+
 .project-card.visible {
     transform: translateX(0);
     opacity: 1;
 }
-  
+
 .project-card.hidden {
     opacity: 0;
     /* Transform is controlled by from-left or from-right classes */
 }
-  
+
 .project-content {
     display: flex;
     flex-direction: column;
@@ -82,22 +82,22 @@ h2 {
     height: 3rem;
     transition: height 0.3s ease;
 }
-  
+
 .project-card:hover .project-content {
     height: 100%;
 }
-  
+
 .project-content h3 {
     padding-bottom: 0.5rem;
     margin: 0;
     color: #333;
 }
-  
+
 .project-content p {
     margin-top: 0.5rem;
     color: #666;
 }
-  
+
 /* Media Queries for Responsive Design */
 
 /* Tablets and Small Desktops */
@@ -111,7 +111,7 @@ h2 {
     }
 
     .project-card {
-        height: 17.5rem; 
+        height: 17.5rem;
     }
 
     .project-content {
@@ -131,13 +131,13 @@ h2 {
     }
 
     h2 {
-        font-size: 1.8rem; /* Smallest heading */
+        font-size: 3rem;
     }
 
     .project-card {
         height: 20rem;
     }
-    
+
     /* Disable hover scaling on touch devices */
     @media (hover: none) {
         .project-card:hover {
