finished frontend 1.0. Next changes will add a backend for viewin viewing code in the site, site viewership metrics, and individual pages for each project

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,7 +6,9 @@
                 #projectCard 
                 *ngFor="let project of projects; let i = index" 
                 class="project-card hidden" 
-                [ngClass]="getRowAnimationClass(i)">
+                [ngClass]="getRowAnimationClass(i)"
+                [style.background-image]="project.backgroundImage ? 'url(' + project.backgroundImage + ')' : 'none'"
+                [style.background-color]="project.backgroundImage ? 'transparent' : '#f0f0f0'">
                 <div class="project-content">
                     <h3>{{ project.title }}</h3>
                     <p [innerHTML]="project.description"></p>
