--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -5,11 +5,11 @@
   height: auto;
   width: 100%;
   background: linear-gradient(to bottom,
-  rgba(0,0,0,0) 0vh,
-  rgba(0,0,0,0.25) 5vh,
-  rgba(0,0,0,0.5) 10vh,
-  rgba(0,0,0,0.75) 15vh,
-  rgba(0,0,0,1) 20vh);
+  rgba(0,0,0,0) 0%,
+  rgba(0,0,0,0.25) 5%,
+  rgba(0,0,0,0.5) 10%,
+  rgba(0,0,0,0.75) 15%,
+  rgba(0,0,0,1) 20%);
   position: relative;
 }
 
@@ -19,11 +19,12 @@
   align-items: center;
   justify-content: start;
   width: 50%;
+  padding-top: 60px;
 }
 
 .spacing {
   display: flex;
-  padding-top: 10vh;
+  padding-top: 20vh;
 }
 
 h2 {
