--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -43,7 +43,8 @@ h2 {
 }
 
 .project-card {
-    background-color: #d3d3d3; /* Light gray */
+    background-size: cover;
+    background-position: center;
     border-radius: 0.6rem;
     overflow: hidden;
     position: relative;
@@ -77,7 +78,7 @@ h2 {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 1);
     padding: 1rem;
     height: 3rem;
     transition: height 0.3s ease;
